3-2 바탕 코드 수정