@@ -7,6 +7,7 @@ import com.rookies3.myspringbootlab.exception.BusinessException;
 import com.rookies3.myspringbootlab.exception.ErrorCode;
 import com.rookies3.myspringbootlab.repository.BookDetailRepository;
 import com.rookies3.myspringbootlab.repository.BookRepository;
+
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -17,217 +18,131 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)  // 읽기 기본
+@Transactional(readOnly = true)
 public class BookService {
 
     private final BookRepository bookRepository;
-    // 전체 조회
+    private final BookDetailRepository bookDetailRepository;
+
     public List<BookDTO.Response> getAllBooks() {
-        return bookRepository.findAll().stream()
+        return bookRepository.findAll()
+                .stream()
                 .map(BookDTO.Response::fromEntity)
                 .toList();
     }
 
-    // ID로 단건 조회
     public BookDTO.Response getBookById(Long id) {
         Book book = bookRepository.findByIdWithBookDetail(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
         return BookDTO.Response.fromEntity(book);
     }
 
-    // ISBN으로 조회
     public BookDTO.Response getBookByIsbn(String isbn) {
         Book book = bookRepository.findByIsbnWithBookDetail(isbn)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "ISBN", isbn));
         return BookDTO.Response.fromEntity(book);
     }
 
-    // 저자로 조회
     public List<BookDTO.Response> getBooksByAuthor(String author) {
-        return bookRepository.findByAuthorContainingIgnoreCase(author).stream()
+        return bookRepository.findByAuthorContainingIgnoreCase(author)
+                .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // 제목으로 조회
     public List<BookDTO.Response> getBooksByTitle(String title) {
-        return bookRepository.findByTitleContainingIgnoreCase(title).stream()
+        return bookRepository.findByTitleContainingIgnoreCase(title)
+                .stream()
                 .map(BookDTO.Response::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    //도서 등록
     @Transactional
     public BookDTO.Response createBook(BookDTO.Request request) {
+        // Validate ISBN is not already in use
         if (bookRepository.existsByIsbn(request.getIsbn())) {
             throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
 
-        // Book + BookDetail 생성
-        BookDetail detail = BookDetail.builder()
-                .description(request.getDetailRequest().getDescription())
-                .language(request.getDetailRequest().getLanguage())
-                .pageCount(request.getDetailRequest().getPageCount())
-                .publisher(request.getDetailRequest().getPublisher())
-                .coverImageUrl(request.getDetailRequest().getCoverImageUrl())
-                .edition(request.getDetailRequest().getEdition())
-                .build();
-
+        // Create book entity
         Book book = Book.builder()
                 .title(request.getTitle())
                 .author(request.getAuthor())
                 .isbn(request.getIsbn())
                 .price(request.getPrice())
                 .publishDate(request.getPublishDate())
-                .bookDetail(detail)
                 .build();
 
-        detail.setBook(book);
+        // Create book detail if provided
+        if (request.getDetail() != null) {
+            BookDetail bookDetail = BookDetail.builder()
+                    .description(request.getDetail().getDescription())
+                    .language(request.getDetail().getLanguage())
+                    .pageCount(request.getDetail().getPageCount())
+                    .publisher(request.getDetail().getPublisher())
+                    .coverImageUrl(request.getDetail().getCoverImageUrl())
+                    .edition(request.getDetail().getEdition())
+                    //연관관계 저장
+                    .book(book)
+                    .build();
+            //연관관계 저장
+            book.setBookDetail(bookDetail);
+        }
 
-        Book saved = bookRepository.save(book);
-        return BookDTO.Response.fromEntity(saved);
+        // Save and return the book
+        Book savedBook = bookRepository.save(book);
+        return BookDTO.Response.fromEntity(savedBook);
     }
 
-    // 도서 수정
     @Transactional
     public BookDTO.Response updateBook(Long id, BookDTO.Request request) {
+        // Find the book
         Book book = bookRepository.findById(id)
                 .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
 
-        // ISBN 중복 검사
+        // Check if another book already has the ISBN
         if (!book.getIsbn().equals(request.getIsbn()) &&
                 bookRepository.existsByIsbn(request.getIsbn())) {
             throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
         }
-        
+
+        // Update book basic info
         book.setTitle(request.getTitle());
         book.setAuthor(request.getAuthor());
         book.setIsbn(request.getIsbn());
         book.setPrice(request.getPrice());
         book.setPublishDate(request.getPublishDate());
-        
-        if (request.getDetailRequest() != null) {
-            BookDetail detail = book.getBookDetail();
 
-            if (detail == null) {
-                detail = BookDetail.builder().build();
-                detail.setBook(book);
-                book.setBookDetail(detail);
+        // Update book detail if provided
+        if (request.getDetail() != null) {
+            BookDetail bookDetail = book.getBookDetail();
+
+            // Create new detail if not exists
+            if (bookDetail == null) {
+                bookDetail = new BookDetail();
+                bookDetail.setBook(book);
+                book.setBookDetail(bookDetail);
             }
 
-            detail.setDescription(request.getDetailRequest().getDescription());
-            detail.setLanguage(request.getDetailRequest().getLanguage());
-            detail.setPageCount(request.getDetailRequest().getPageCount());
-            detail.setPublisher(request.getDetailRequest().getPublisher());
-            detail.setCoverImageUrl(request.getDetailRequest().getCoverImageUrl());
-            detail.setEdition(request.getDetailRequest().getEdition());
+            // Update detail fields
+            bookDetail.setDescription(request.getDetail().getDescription());
+            bookDetail.setLanguage(request.getDetail().getLanguage());
+            bookDetail.setPageCount(request.getDetail().getPageCount());
+            bookDetail.setPublisher(request.getDetail().getPublisher());
+            bookDetail.setCoverImageUrl(request.getDetail().getCoverImageUrl());
+            bookDetail.setEdition(request.getDetail().getEdition());
         }
 
-        return BookDTO.Response.fromEntity(book);
+        // Save and return updated book
+        Book updatedBook = bookRepository.save(book);
+        return BookDTO.Response.fromEntity(updatedBook);
     }
 
-    @Transactional
-    public BookDTO.Response updateBookDetail(Long id, BookDTO.BookDetailPatchRequest detailRequest) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-
-        BookDetail detail = book.getBookDetail();
-        if (detail == null) {
-            detail = BookDetail.builder().build();
-            detail.setBook(book);
-            book.setBookDetail(detail);
-        }
-
-        if (detailRequest.getDescription() != null) {
-            detail.setDescription(detailRequest.getDescription());
-        }
-        if (detailRequest.getLanguage() != null) {
-            detail.setLanguage(detailRequest.getLanguage());
-        }
-        if (detailRequest.getPageCount() != null) {
-            detail.setPageCount(detailRequest.getPageCount());
-        }
-        if (detailRequest.getPublisher() != null) {
-            detail.setPublisher(detailRequest.getPublisher());
-        }
-        if (detailRequest.getCoverImageUrl() != null) {
-            detail.setCoverImageUrl(detailRequest.getCoverImageUrl());
-        }
-        if (detailRequest.getEdition() != null) {
-            detail.setEdition(detailRequest.getEdition());
-        }
-
-        return BookDTO.Response.fromEntity(book);
-    }
-
-    @Transactional
-    public BookDTO.Response updateBookPartial(Long id, BookDTO.PatchRequest request) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-
-        // ISBN 중복 체크
-        if (request.getIsbn() != null &&
-                !book.getIsbn().equals(request.getIsbn()) &&
-                bookRepository.existsByIsbn(request.getIsbn())) {
-            throw new BusinessException(ErrorCode.ISBN_DUPLICATE, request.getIsbn());
-        }
-
-        if (request.getTitle() != null) {
-            book.setTitle(request.getTitle());
-        }
-        if (request.getAuthor() != null) {
-            book.setAuthor(request.getAuthor());
-        }
-        if (request.getIsbn() != null) {
-            book.setIsbn(request.getIsbn());
-        }
-        if (request.getPrice() != null) {
-            book.setPrice(request.getPrice());
-        }
-        if (request.getPublishDate() != null) {
-            book.setPublishDate(request.getPublishDate());
-        }
-
-        if (request.getDetailRequest() != null) {
-            updateBookDetailFields(book, request.getDetailRequest());
-        }
-
-        return BookDTO.Response.fromEntity(book);
-    }
-
-    @Transactional
-    public BookDTO.Response updateBookDetailPartial(Long id, BookDTO.BookDetailPatchRequest request) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-
-        updateBookDetailFields(book, request);
-
-        return BookDTO.Response.fromEntity(book);
-    }
-
-    private void updateBookDetailFields(Book book, BookDTO.BookDetailPatchRequest request) {
-        BookDetail detail = book.getBookDetail();
-        if (detail == null) {
-            detail = BookDetail.builder().build();
-            detail.setBook(book);
-            book.setBookDetail(detail);
-        }
-
-        if (request.getDescription() != null) detail.setDescription(request.getDescription());
-        if (request.getLanguage() != null) detail.setLanguage(request.getLanguage());
-        if (request.getPageCount() != null) detail.setPageCount(request.getPageCount());
-        if (request.getPublisher() != null) detail.setPublisher(request.getPublisher());
-        if (request.getCoverImageUrl() != null) detail.setCoverImageUrl(request.getCoverImageUrl());
-        if (request.getEdition() != null) detail.setEdition(request.getEdition());
-    }
-
-
-
-    // 도서 삭제
     @Transactional
     public void deleteBook(Long id) {
-        Book book = bookRepository.findById(id)
-                .orElseThrow(() -> new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id));
-        bookRepository.delete(book);
+        if (!bookRepository.existsById(id)) {
+            throw new BusinessException(ErrorCode.RESOURCE_NOT_FOUND, "Book", "id", id);
+        }
+        bookRepository.deleteById(id);
     }
 }
